# oscc

api/include/vehicles/: kia_soul_ev.h
firmware/: CMakeLists.txt
firmware/brake/kia_soul_ev/src/: main.cpp
firmware/brake/kia_soul_petrol/src/: main.cpp
firmware/steering/src/: main.cpp  steering_control.cpp
firmware/throttle/src/: main.cpp
utils/diagnostics_tool/: CMakeLists.txt
utils/diagnostics_tool/src/: main.c
